Changes for 2.2.4rc1

New features:
.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Romanian, Russian, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
........S. [ZBX-8230] changed maintenance status log messages from warning to debug level (Juris)
...G...... [ZBX-7098] improved handling of log file rotation/truncation for logrt[] and log[] items (Andris)
........S. [ZBX-8210] fixed crash when attempting to evaluate an eventlog key for items obtained from the value cache (Juris)
........S. [ZBX-8219] fixed regression in ipmi checks to support on/off values for sent commands (Juris)
...G...... [ZBX-8213] fixed library loading code on Windows to prevent potential crash condition (Juris)
...G...... [ZBX-8223] fixed compilation of dummy module on 64-bit platforms by adding "-fPIC" (asaveljevs)
.........T [ZBX-7387] changed default memory usage graph display method for operating system templates (Juris)
A.F....... [ZBX-8101] fixed exporting maps from Oracle database (Eduard, Ivo)
...G...... [ZBX-8198] decreased verbosity of Windows agent with DebugLevel=4 (Nikolaj)
...G...PS. [ZBX-7729] added data alignment to prevent crash on non x86 processors; thanks to Pablo Ruiz for patch (Nikolaj)
.......PS. [ZBX-8202] fixed queue calculation for unavailable hosts which are monitored through a proxy (Nikolaj)
.......PS. [ZBX-8152] added informative log message about optional database patches (Juris)
...G...PS. [ZBX-8138] fixed ssh infostring searching and validation for ssh related items to allow information messages as per RFC4253 Section 4.2 (Juris)
...G...... [ZBX-7875] fixed wrongly reported system version for Windows 8.1 and Server 2012 R2 (Nikolaj, wiper)